--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: "Update status to QA Testing when a pull request is merged"
-description: "Notify when a pull request is merged by changing the status to QA Testing"
+name: "Release Options"
+description: "Print the release options for the project"
 author: "Emily Lambrou"
 branding:
   icon: 'notification'
