--- a/action.yml
+++ b/action.yml
@@ -17,10 +17,10 @@ inputs:
   project_title:
     description: "The Project Title"
     required: true
-  status_field_name:
-    description: "The field name of the status"
+  duedate_field_name:
+    description: "The field name of the due date"
     required: true
-    default: 'Status'
+    default: 'Due Date'
   enterprise_github:
     description: "Determines if the GitHub is the enterprise ot not (True,False)"
     required: false
